kubernetes/applications/ceph-storage/manifests/loki/loki-namespace.yml
---
# =====================================
# 0) Namespace
# =====================================
apiVersion: v1
kind: Namespace
metadata:
  name: loki
