kubernetes/applications/ceph-storage/manifests/loki/loki-app-service.yml
---
# =====================================
# 4) Service (ClusterIP)
# =====================================
apiVersion: v1
kind: Service
metadata:
  name: loki-app
  namespace: loki
  labels:
    app: loki
spec:
  type: ClusterIP
  selector:
    app: loki
  ports:
    - name: http
      port: 3100
      targetPort: 3100
